# 362

./: .gitignore  Cargo.toml  DesignGuidelines.md  README.md  biome.json  index.html  lefthook.yml  run_project-362.bat
.github/ci/ort-smoke/: Cargo.toml
crates/project-362-a11y/: Cargo.toml
crates/project-362-a11y/examples/: linux_debug.rs  linux_deep.rs  linux_e2e.rs  linux_test.rs  macos_axbatch_bench.rs  macos_walk_bench.rs  windows_probe_harness.rs
crates/project-362-a11y/src/: activity_feed.rs  budget.rs  config.rs  events.rs  lib.rs  scroll.rs  url_filter.rs
crates/project-362-a11y/tests/: e2e_obsidian.rs  e2e_tree_walker.rs
crates/project-362-audio/: Cargo.toml  build.rs
crates/project-362-audio-eval/: Cargo.toml  build.rs
crates/project-362-audio-eval/evals/: ATTRIBUTION.md  README.md  download_librispeech.sh  download_voxconverse.sh
crates/project-362-audio-eval/src/: compose.rs  der.rs  lib.rs  librispeech.rs  rttm.rs  wer.rs
crates/project-362-audio/examples/: bench_engines.rs  bench_parakeet.rs  bench_quality.rs  bench_quality2.rs  bt_reopen_probe.rs  meeting_input_probe.rs  meeting_tap_probe.rs  parakeet_bench.rs  project-362-audio.rs  race_repro.rs  wer_battle_test.rs
crates/project-362-audio/scripts/: gen_wer_corpus.sh
crates/project-362-audio/src/: idle_detector.rs  lib.rs  meeting_detector.rs  meeting_processes.rs  metrics.rs
crates/project-362-audio/tests/: accuracy_test.rs  batch_deferral_test.rs  bluetooth_gap_hallucination_test.rs  channel_lag_test.rs  core_tests.rs  hf_tls_test.rs  music_detection_real.rs  onnx_model_test.rs  overlap_dedup_test.rs  speaker_identification.rs
crates/project-362-capture/: Cargo.toml
crates/project-362-capture/examples/: ocr_gate_ab.rs
crates/project-362-capture/src/: lib.rs  ocr_gate.rs  paired_capture.rs
crates/project-362-config/: Cargo.toml
crates/project-362-config/src/: defaults.rs  lib.rs  persistence.rs  recording.rs  screen_lock.rs
crates/project-362-connect/: Cargo.toml
crates/project-362-connect/src/: calendar.rs  calendar_windows.rs  ics_calendar.rs  lib.rs  mcp_servers.rs  mdns.rs  oauth.rs  oauth_refresh_scheduler.rs  remote_sync.rs  sync_scheduler.rs  unstructured_ocr.rs
crates/project-362-core/: Cargo.toml
crates/project-362-core/examples/: probe_screen_recording.rs
crates/project-362-core/src/: actions.rs  ffmpeg.rs  lib.rs  paths.rs  permissions.rs  pii_removal.rs  strings.rs  thread_priority.rs  video.rs  window_pattern.rs
crates/project-362-db/: Cargo.toml
crates/project-362-db/benches/: db_benchmarks.rs  new_db_benchmark.rs  search_accuracy.rs
crates/project-362-db/src/: failpoint_vfs.rs  lib.rs  sqlite_error.rs  text_normalizer.rs  text_similarity.rs  types.rs  write_queue.rs
crates/project-362-db/tests/: audio_duplicate_test.rs  chunk_outcome_test.rs  close_severs_connections_test.rs  db.rs  db_config_test.rs  display_layout_test.rs  evict_media_null_chunk_test.rs  frame_offset_sync_test.rs  fts_contention_test.rs  fts_dots_test.rs  heavy_read_test.rs  keyword_search_accessibility_test.rs  keyword_search_order_test.rs  live_coverage_marker_test.rs  meeting_context_test.rs  meeting_end_reason_test.rs  meeting_transcript_dedup_test.rs  memory_pressure_test.rs  multi_pool_wal_parity_test.rs  ocr_elements_bulk_test.rs  on_screen_filter_test.rs  orphan_chunk_null_poisoning_test.rs  output_audio_liveness_test.rs  output_search_test.rs  outputs_saf_test.rs  query_plan_test.rs  search_ocr_snapshot_test.rs  single_open_meeting_invariant_test.rs  speaker_benchmark.rs  speaker_delete_test.rs  speaker_reassignment_test.rs  suggestions_frames_table_test.rs  tag_autocomplete_query_test.rs  tag_filter_bench.rs  timeline_frameless_audio_test.rs  timeline_live_meeting_test.rs  timeline_performance_test.rs  ui_events_batch_test.rs  untranscribed_chunks_test.rs
crates/project-362-engine/: Cargo.toml  README.md  build.rs
crates/project-362-engine/benches/: alloc_counter.rs  hot_frame_cache.rs
crates/project-362-engine/examples/: meeting_scan_stress.rs
crates/project-362-engine/src/: analytics.rs  archive.rs  auth_key.rs  auto_destruct.rs  calendar_speaker_id.rs  cli_reminder.rs  cloud_search.rs  connections_api.rs  core.rs  crash_log.rs  drm_detector.rs  event_driven_capture.rs  external_memory_sync.rs  fd_limit.rs  focus_aware_controller.rs  frame_linker.rs  frame_linker_actor.rs  hd_recorder.rs  high_fps_controller.rs  hot_frame_cache.rs  lib.rs  logging.rs  mcp_servers_api.rs  meeting_export.rs  oauth_result_page.rs  permission_monitor.rs  piggyback_telemetry.rs  pipe_permissions_middleware.rs  pipe_store.rs  pipes_api.rs  privacy_filter.rs  process_priority.rs  recording_config.rs  recording_coverage.rs  resource_monitor.rs  retention.rs  schedule_monitor.rs  server.rs  sleep_monitor.rs  snapshot_compaction.rs  (+8 more)
crates/project-362-engine/tests/: audio_vision_integration_test.rs  endpoint_test.rs  first_frames_test.rs  frame_extraction_test.rs  frame_linker_actor_integration.rs  health_debounce_test.rs  meeting_detection_eval.rs  retention_lean_test.rs  stream_frames_test.rs  tags_test.rs  timeline_refresh_bug_test.rs  transcribe_test.rs  video_cache_test.rs  video_utils_test.rs
crates/project-362-events/: Cargo.toml
crates/project-362-events/benches/: events.rs
crates/project-362-events/src/: lib.rs
crates/project-362-events/tests/: cross_crate_events_test.rs  events_manager_test.rs
crates/project-362-meeting-eval/: Cargo.toml
crates/project-362-meeting-eval/evals/: README.md
crates/project-362-meeting-eval/src/: lib.rs
crates/project-362-redact/: Cargo.toml
crates/project-362-redact/examples/: pii_eval.rs  pii_load.rs  rfdetr_ep_probe.rs  tinfoil_probe.rs  v45_phase3_smoke.rs
crates/project-362-rfdetr-mlx/: Cargo.toml  README.md
crates/project-362-screen/: Cargo.toml
crates/project-362-secrets/: Cargo.toml
crates/project-362-sync/: Cargo.toml  README.md
crates/project-362-team-memory/: Cargo.toml
crates/project-362-vault/: Cargo.toml
ee/sdk/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
ee/sdk/docs/: release.md  (+1 more)
(+899 files in other folders)
