[package]
name = "project-362-a11y"
version = "0.1.0"
edition = "2021"
description = "Accessibility and UI event capture for project-362 - keyboard, mouse, clipboard"
license-file = { workspace = true }

[features]
default = []
db = ["project-362-db"]

[dependencies]
project-362-db = { path = "../project-362-db", optional = true }
project-362-core = { path = "../project-362-core" }
project-362-config = { path = "../project-362-config" }
# Core
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = { workspace = true }
arc-swap = { workspace = true }

# Regex for privacy patterns
regex = { workspace = true }

# Clipboard access (native NSPasteboard/Win32/X11 — no subprocess)
arboard = "3"

# Cross-platform user-config dir for electron_docs path resolution
# (Obsidian / VS Code fork state files live under `dirs::config_dir()`
# on every supported OS — `~/Library/Application Support` on macOS,
# `%APPDATA%` on Windows, `~/.config` on Linux).
dirs = { workspace = true }

# VS Code fork document_path resolution reads `state.vscdb` (SQLite).
# Pinned to 0.29 because that's the last release on libsqlite3-sys 0.26 —
# same version project-362-db pins, so adding this does not pull a second
# copy of the C library into the workspace. `bundled` ensures we ship our
# own SQLite on every OS rather than depending on the system's.
rusqlite = { version = "0.29", features = ["bundled"] }
url = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre.git", rev = "8d0f7307d201d75328ed82ea0d4ca7bb0a649716", features = ["ax", "cg", "blocks", "ns", "app", "dispatch"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSPasteboard"] }
# Window-server frontmost-app query (CGWindowList) — the run-loop-free
# source of truth the focused-app resolver cross-checks AX focus against.
core-foundation = { workspace = true }
core-graphics = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Native Windows APIs - no rdev dependency
windows-core = "0.58"
windows = { workspace = true, features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# AT-SPI2 accessibility via D-Bus (pure Rust, no system deps for compilation)
zbus = { workspace = true }
# Input device events from /dev/input/event*
evdev = "0.13"
# fcntl for non-blocking I/O on evdev fds
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
# Linux debug examples are compiled by `cargo clippy --all-targets` on every
# developer OS, so keep their D-Bus dependency available outside Linux too.
zbus = { workspace = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
libc = { workspace = true }
