[package]
name = "project-362-connect"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

# libsqlite3-sys is pulled in for the `bundled` feature so workspace crates
# link against the same C SQLite. Not directly imported here — silence machete.
[package.metadata.cargo-machete]
ignored = ["libsqlite3-sys"]

[dependencies]
specta = { workspace = true, optional = true }
image = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
project-362-core = { path = "../project-362-core" }
project-362-secrets = { path = "../project-362-secrets" }
project-362-vault = { path = "../project-362-vault" }
tracing = { workspace = true }
# NOTE: dropped the `rsa` feature — it pulls `rsa = "0.10.0-rc.12"` which
# has a `match`-arm type error against the pinned `pkcs8 = 0.11`. Ring
# already covers Ed25519 and ECDSA SSH keys, which is what every modern
# host accepts; if a user genuinely needs RSA SSH key support, re-enable
# this feature and pin `rsa` to a version compatible with the resolved
# `pkcs8`. v2.4.170 left this broken on a pristine cargo check.
russh = { version = "0.60", default-features = false, features = ["ring", "flate2"] }
russh-sftp = "2.1"
dirs = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
icalendar = "0.17"
async-trait = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
# Bee "connect" device-pairing flow: NaCl crypto_box (X25519 + XSalsa20-Poly1305)
# to decrypt the app-pairing token the auth service seals to our ephemeral
# public key. `salsa20` feature = `SalsaBox` (libsodium/tweetnacl-compatible).
crypto_box = { version = "0.9", features = ["salsa20"] }
getrandom = { version = "0.2" }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
mdns-sd = "0.13"
sqlx = { workspace = true }
libsqlite3-sys = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
specta = ["dep:specta"]

[target.'cfg(target_os = "macos")'.dependencies]
eventkit-rs = { git = "https://github.com/divanshu-go/eventkit-rs", rev = "9dd52787c8435d734ed443e2d5641f45b0177cae", default-features = false, features = ["events"] }
objc2 = "0.6"
objc2-event-kit = "0.3"
objc2-foundation = "0.3"
chrono = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "ApplicationModel_Appointments",
    "Foundation",
    "Foundation_Collections",
] }
chrono = { workspace = true }
