[package]
name = "project-362-db"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
image = { workspace = true }
sqlx = { workspace = true, features = [
  "chrono",
  "migrate",
] }
sqlite-vec = "0.1.3"
libsqlite3-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true, features = ["std"] }

project-362-config = { path = "../project-362-config" }
zerocopy = { version = "0.7.32" }

tokio = { workspace = true }
tokio-util = "0.7"

tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }
oasgen = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
project-362-core = { path = "../project-362-core" }
project-362-secrets = { path = "../project-362-secrets" }
tempfile = { workspace = true }

[[bench]]
name = "db_benchmarks"
harness = false

[[bench]]
name = "new_db_benchmark"
harness = false
