[package]
name = "project-362-engine"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
oasgen = { workspace = true }

project-362-events = { path = "../project-362-events" }
project-362-screen = { path = "../project-362-screen" }
project-362-audio = { path = "../project-362-audio" }
project-362-core = { path = "../project-362-core", features = ["security", "cloud-sync", "secrets"] }
project-362-db = { path = "../project-362-db" }
project-362-redact = { path = "../project-362-redact", features = ["opf-text"] }
project-362-a11y = { path = "../project-362-a11y", features = ["db"] }
project-362-capture = { path = "../project-362-capture" }
project-362-config = { path = "../project-362-config" }
project-362-connect = { path = "../project-362-connect" }
project-362-vault = { path = "../project-362-vault" }
project-362-secrets = { path = "../project-362-secrets" }


# Image processing
image = { workspace = true }

# Dates
chrono = { workspace = true }

# Database
sqlx = { workspace = true, features = [
    "chrono",
    "migrate",
] }

anyhow = { workspace = true }
async-trait = { workspace = true }
moka = { workspace = true }

#opentelemetry
sentry = { workspace = true }

# Server
axum = { workspace = true }
http-body-util = "0.1"
tokio = { workspace = true }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
console-subscriber = { version = "0.4.1", optional = true }
# Cli ! shouldn't be required if using as lib
clap = { workspace = true, features = ["env"] }

# Memory watchdog
sysinfo = { workspace = true }

# Color
colored = "2.0"

# Plugins
futures = { workspace = true, features = ["std"] }

# Directory management
dirs = { workspace = true }

# Password input (no-echo for vault CLI)
rpassword = "5"

# Client http
reqwest = { workspace = true }

# Tinfoil enclave attestation: AMD SEV-SNP attestation + Sigstore code-provenance
# verification + TLS cert pinning for the privacy-filter PII redaction service
# (see src/privacy_filter.rs). Without this, a MITM or compromised CA could
# observe unredacted text on its way to the enclave.
# Upstream tinfoilsh/tinfoil-rs main, post-#21 (the ring-backend fix).
tinfoil = { workspace = true }

# base64
base64 = { workspace = true }

uuid = { workspace = true }

# Used by /connections/browsers/:id/navigate to validate URLs up-front so
# clients get 400 (client error) on malformed input rather than 502 from
# the upstream eval transport.
url = { workspace = true }

# Cloud sync utilities
hostname = "0.4"
md5 = "0.7"

tempfile = { workspace = true }


# Bincode for serializing hot cache
bincode = "1.3.3"

# SHA256 for hashing
sha2 = { workspace = true }

# Fast random number generator
fastrand = "2.1.1"
port_check = "0.2.1"

regex = { workspace = true }

lru = "0.16.3"
tokio-util = { version = "0.7", features = ["io"] }

once_cell = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }

# Heap profiling (opt-in via --features heap-prof)
dhat = { version = "0.3", optional = true }

# jemalloc — aggressively returns freed pages to OS, reducing RSS bloat from fragmentation.
# Default allocator on macOS/Linux. Not used on Windows (unsupported).
[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { version = "0.4", features = ["util"] }

# Lock-free queue used by tests/consumer_sleep_test.rs to reproduce the
# OCR frame-drop bug (see the test's docstring). Not needed by the crate
# itself — src/, benches/, and examples/ don't import crossbeam.
crossbeam = { workspace = true }

# Benches
criterion = { workspace = true }

[features]
# redact-onnx-cpu is in defaults because project-362-engine.rs unconditionally
# imports `project_362_redact::adapters::onnx` for the async PII worker. Without
# it, `cargo {check,clippy,build} -p project-362-engine` (no --features) fails
# to compile. Mac/Win release builds layer redact-onnx-{coreml,directml} on top.
default = ["qwen3-asr", "parakeet", "redact-onnx-cpu"]
metal = ["project-362-audio/metal"]
heap-prof = ["dhat"]
cuda = ["project-362-audio/cuda"]
directml = ["project-362-audio/directml"]
vulkan = ["project-362-audio/vulkan"]
debug-console = ["console-subscriber"]
pulseaudio = ["project-362-audio/pulseaudio"]
qwen3-asr = ["project-362-audio/qwen3-asr"]
parakeet = ["project-362-audio/parakeet"]
parakeet-mlx = ["project-362-audio/parakeet-mlx"]
# Image-PII detector via MLX (Apple Silicon-only). Compiled into macOS
# release builds for experiments, but the CLI runtime keeps ONNX as the
# default stable path unless SCREENPIPE_ENABLE_EXPERIMENTAL_RFDETR_MLX=1
# is set.
rfdetr-mlx = ["project-362-redact/mlx-mac"]

# v45 phase 3 text-PII redactor via ONNX Runtime. CPU baseline for
# Linux + the foundation for the GPU EPs below. ~280 MB INT8 model
# downloaded on first run.
redact-onnx-cpu = ["project-362-redact/onnx-cpu"]
# Mac: CoreML EP on top of CPU baseline. Apple Silicon picks up Metal
# + Neural Engine. Stock-OS dependency — no separate install.
redact-onnx-coreml = ["project-362-redact/onnx-coreml"]
# Windows: DirectML EP on top of CPU baseline. Any DX12-capable GPU
# (NVIDIA, AMD, Intel iGPU). Stock-OS dependency — DirectML.dll ships
# in Windows 10+ since 2019. Distinct from the existing `directml`
# feature, which forwards to project-362-audio's whisper.cpp.
redact-onnx-directml = ["project-362-redact/onnx-directml"]

jemalloc = ["tikv-jemallocator"]

[[bin]]
name = "project-362"
path = "src/bin/project-362-engine.rs"

[[bench]]
name = "hot_frame_cache"
harness = false

[[bench]]
name = "alloc_counter"
harness = false


[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true, default-features = false, features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
socket2 = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre.git", rev = "8481f3f0dc7dd39bb5be80d9424bfac0cad3801a", features = ["ax", "ns", "av", "blocks"] }
tracing-oslog = { workspace = true }

[package.metadata.cargo-machete]
# project-362-redact is wired into the engine binary (image-PII
# reconciliation worker, project-362-engine.rs:1571).
ignored = []
