[package]
name = "project-362-events"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
once_cell = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
criterion = { workspace = true }
serial_test = "3.2.0"

[[bench]]
name = "events"
harness = false
